# automatic-memory

./: .gitignore  AGENTS.md  app.py  config.json  example.config.json  pyproject.toml  requirements.txt  sha3_wasm_bg.7b9ca65ddd.wasm
go-ver/: .gitignore  go.mod
go-ver/cloud-sync/: .dockerignore  Dockerfile  go.mod
go-ver/cloud-sync/cmd/cloudsync/: main.go
go-ver/cloud-sync/internal/config/: config.go
go-ver/cloud-sync/internal/handlers/: sync_handler.go
go-ver/cloud-sync/internal/http/: router.go  router_test.go
go-ver/cloud-sync/internal/models/: types.go
go-ver/cloud-sync/migrations/: 001_sync_items.sql  002_sync_events.sql  003_sync_sessions.sql
go-ver/cloud-sync/web/: index.html  package-lock.json  package.json  tailwind.config.js
go-ver/cmd/server/: main.go
go-ver/internal/accounts/: pool.go  pool_test.go
go-ver/internal/auth/: auth.go
go-ver/internal/clients/: deepseek.go  httpclient.go
go-ver/internal/cloudsync/: client.go  manager.go  manager_test.go
go-ver/internal/config/: config.go
go-ver/internal/handlers/: anthropic_models.go  claude_messages.go  claude_tokens.go  openai_chat.go  openai_models.go  pool.go  root.go  sync.go
go-ver/internal/httpserver/: router.go
go-ver/internal/logging/: logging.go
go-ver/internal/middleware/: cors.go  recovery.go
go-ver/internal/pow/: cache.go  solver.go
go-ver/internal/services/: claude_nonstream.go  claude_stream.go  models.go  openai_nonstream.go  openai_stream.go  tokens.go
go-ver/internal/state/: state.go
go-ver/internal/templates/: welcome.html
go-ver/pkg/types/: requests.go
(+25 files in other folders)
